--- a/index.html
+++ b/index.html
@@ -1,94 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>CatPhotoApp</title>
-</head>
-<body>
-  <main>
-    <h1>CatPhotoApp</h1>
+  <head>
+    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <title>Cafe Menu</title>
+  </head>
+  <body>
+    <div class="menu">
+    <main>
+      <h1>CAMPER CAFE</h1>
+      <p>Est. 2020</p>
+      <section>
+        <h2>Coffee</h2>
+        <article class="item">
+            <p class="flavor"> French Vanilla</p>
+            <p class="price">3.00</p>
+        </article>
 
-    <section>
-      <h2>Cat Photos</h2>
-      <p>
-        Everyone loves
-        <a href="https://cdn.freecodecamp.org/curriculum/cat-photo-app/running-cats.jpg">cute cats</a>
-        online!
-      </p>
-      <p>
-        See more
-        <a target="_blank" href="https://freecatphotoapp.com">cat photos</a>
-        in our gallery.
-      </p>
-      <a href="https://freecatphotoapp.com">
-        <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg"
-             alt="A cute orange cat lying on its back.">
-      </a>
-    </section>
+        <article>
+            <p>Caramel Macchiato</p>
+            <p>3.75</p>
+        </article>
 
-    <section>
-      <h2>Cat Lists</h2>
+        <article>
+            <p>Pumpkin Spice</p>
+            <p>3.50</p>
+        </article>
 
-      <h3>Things cats love:</h3>
-      <ul>
-        <li>catnip</li>
-        <li>laser pointers</li>
-        <li>lasagna</li>
-      </ul>
-      <figure>
-        <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg"
-             alt="A slice of lasagna on a plate.">
-        <figcaption>Cats <em>love</em> lasagna.</figcaption>
-      </figure>
+        <article>
+            <p>Hazelnut</p>
+            <p>4.00</p>
+        </article>
 
-      <h3>Top 3 things cats hate:</h3>
-      <ol>
-        <li>flea treatment</li>
-        <li>thunder</li>
-        <li>other cats</li>
-      </ol>
-      <figure>
-        <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg"
-             alt="Two tabby kittens sleeping together on a couch.">
-        <figcaption>Cats <strong>hate</strong> other cats.</figcaption>
-      </figure>
-    </section>
+        <article>
+            <p>Mocha</p>
+            <p>4.50</p>
+        </article>
 
-    <section>
-      <h2>Cat Form</h2>
-      <form action="https://freecatphotoapp.com/submit-cat-photo">
-
-        <fieldset>
-          <legend>Is your cat an indoor or outdoor cat?</legend>
-          <label>
-            <input id="indoor" checked type="radio" name="indoor-outdoor" value="indoor"> Indoor
-          </label>
-          <label>
-            <input id="outdoor" type="radio" name="indoor-outdoor" value="outdoor"> Outdoor
-          </label>
-        </fieldset>
-
-        <fieldset>
-          <legend>What's your cat's personality?</legend>
-          <input id="loving" checked type="checkbox" name="personality" value="loving">
-          <label for="loving">Loving</label>
-          <input id="lazy" type="checkbox" name="personality" value="lazy">
-          <label for="lazy">Lazy</label>
-          <input id="energetic" type="checkbox" name="personality" value="energetic">
-          <label for="energetic">Energetic</label>
-        </fieldset>
-
-        <input type="text" name="catphotourl" placeholder="cat photo URL" required>
-        <button type="submit">Submit</button>
-      </form>
-    </section>
-  </main>
-
-  <footer>
-    <p>
-      No Copyright -
-      <a href="https://www.freecodecamp.org">freeCodeCamp.org</a>
-    </p>
-  </footer>
-</body>
+      </section>
+    </main>
+    </div>
+  </body>
 </html>
