--- a/index.html
+++ b/index.html
@@ -1,45 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="utf-8" />
-    <title>Cafe Menu</title>
-  </head>
-  <body>
-    <div class="menu">
+<head>
+    <meta charset="utf-8">
+    <title>fCC Cat Painting</title>
+    <link rel="stylesheet" href="./styles.css">
+</head>
+
+<body>
     <main>
-      <h1>CAMPER CAFE</h1>
-      <p>Est. 2020</p>
-      <section>
-        <h2>Coffee</h2>
-        <article class="item">
-            <p class="flavor"> French Vanilla</p>
-            <p class="price">3.00</p>
-        </article>
+        <div class="cat-head">
+            <div class="cat-ears">
+                <div class="cat-left-ear">
+                    <div class="cat-left-inner-ear"></div>
+                </div>
+                <div class="cat-right-ear">
+                    <div class="cat-right-inner-ear"></div>
+                </div>
+            </div>
+        </div>
 
-        <article>
-            <p>Caramel Macchiato</p>
-            <p>3.75</p>
-        </article>
+        <div class="cat-eyes">
+            <div class="cat-left-eye">
+                <div class="cat-left-inner-eye"></div>
+            </div>
+            <div class="cat-right-eye">
+                <div class="cat-right-inner-eye"></div>
+            </div>
+        </div>
 
-        <article>
-            <p>Pumpkin Spice</p>
-            <p>3.50</p>
-        </article>
-
-        <article>
-            <p>Hazelnut</p>
-            <p>4.00</p>
-        </article>
-
-        <article>
-            <p>Mocha</p>
-            <p>4.50</p>
-        </article>
-
-      </section>
+        <div class="cat-nose"></div>
+        <div class="cat-mouth">
+            <div class="cat-mouth-line-left"></div>
+            <div class="cat-mouth-line-right"></div>
+        </div>      
+        
+        <div class="cat-whiskers">
+            <div class="cat-whiskers-left">
+                <div class="cat-whisker-left-top"></div>
+                <div class="cat-whisker-left-middle"></div>
+                <div class="cat-whisker-left-bottom"></div>
+            </div>
+            <div class="cat-whiskers-right">
+                <div class="cat-whisker-right-top"></div>
+                <div class="cat-whisker-right-middle"></div>
+                <div class="cat-whisker-right-bottom"></div>
+            </div>
+        </div>
     </main>
-    </div>
-  </body>
+
+</body>
 </html>
