--- a/index.html
+++ b/index.html
@@ -1,52 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>fCC Cat Painting</title>
-    <link rel="stylesheet" href="./styles.css">
-</head>
+  <head>
+    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8" />
+    <title>Piano</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body>
+    <div id="piano">
 
-<body>
-    <main>
-        <div class="cat-head">
-            <div class="cat-ears">
-                <div class="cat-left-ear">
-                    <div class="cat-left-inner-ear"></div>
-                </div>
-                <div class="cat-right-ear">
-                    <div class="cat-right-inner-ear"></div>
-                </div>
-            </div>
-        </div>
+        <img src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg" alt="freeCodeCamp Logo" class="logo">
+      <div class="keys">
+        <div class="key"></div>
+        <div class="key black--key"></div>
+        <div class="key black--key"></div>
+        <div class="key"></div>
+        <div class="key black--key"></div>
+        <div class="key black--key"></div>
+        <div class="key black--key"></div>
 
-        <div class="cat-eyes">
-            <div class="cat-left-eye">
-                <div class="cat-left-inner-eye"></div>
-            </div>
-            <div class="cat-right-eye">
-                <div class="cat-right-inner-eye"></div>
-            </div>
-        </div>
+        <div class="key"></div>
+        <div class="key black--key"></div>
+        <div class="key black--key"></div>
+        <div class="key"></div>
+        <div class="key black--key"></div>
+        <div class="key black--key"></div>
+        <div class="key black--key"></div>
 
-        <div class="cat-nose"></div>
-        <div class="cat-mouth">
-            <div class="cat-mouth-line-left"></div>
-            <div class="cat-mouth-line-right"></div>
-        </div>      
-        
-        <div class="cat-whiskers">
-            <div class="cat-whiskers-left">
-                <div class="cat-whisker-left-top"></div>
-                <div class="cat-whisker-left-middle"></div>
-                <div class="cat-whisker-left-bottom"></div>
-            </div>
-            <div class="cat-whiskers-right">
-                <div class="cat-whisker-right-top"></div>
-                <div class="cat-whisker-right-middle"></div>
-                <div class="cat-whisker-right-bottom"></div>
-            </div>
-        </div>
-    </main>
+        <div class="key"></div>
+        <div class="key black--key"></div>
+        <div class="key black--key"></div>
+        <div class="key"></div>
+        <div class="key black--key"></div>
+        <div class="key black--key"></div>
+        <div class="key black--key"></div>
 
-</body>
+       </div>
+    </div>
+  </body>
 </html>
