--- a/ProductLanding/index.html
+++ b/ProductLanding/index.html
@@ -50,7 +50,7 @@
           id="video"
           width="560"
           height="315"
-          src="https://www.youtube.com/embed/qnMus-jqkd4"
+          src="https://www.youtube.com/embed/ysz5S6PUM-U"
           title="Product demo"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
