--- a/TechnicalDocs/index.html
+++ b/TechnicalDocs/index.html
@@ -1,73 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tech Documentation</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>VS Code Shortcut Keys Documentation</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <nav id="navbar">
-        <header>Documentation Topics</header>
-        <ul>
-        <li><a class="nav-link" href="#Introduction">Introduction</a></li>
-        <li><a class="nav-link" href="#Web_Development">Web Development</a></li>
-        <li><a class="nav-link" href="#HTML">HTML</a></li>
-        <li><a class="nav-link" href="#CSS">CSS</a></li>
-        <li><a class="nav-link" href="#JavaScript">JavaScript</a></li>
-        </ul>
-    </nav>
 
-    <main id="main-doc">
-    <section class="main-section" id="Introduction">
-      <header>Introduction</header>
-      <p>Hello! I’m a passionate web developer dedicated to creating clean, functional, and visually appealing websites that deliver great user experiences.</p>
-      <p>Web developers work with various programming languages and tools such as <code>HTML</code>, <code>CSS</code>, <code>JavaScript</code>, and frameworks to bring digital ideas to life.</p>
+  <nav id="navbar">
+    <header>VS Code Shortcuts</header>
+    <ul>
+      <li><a class="nav-link" href="#Introduction_to_VS_Code">Introduction to VS Code</a></li>
+      <li><a class="nav-link" href="#Basic_Editing_Shortcuts">Basic Editing Shortcuts</a></li>
+      <li><a class="nav-link" href="#Multi-Cursor_and_Selection">Multi-Cursor and Selection</a></li>
+      <li><a class="nav-link" href="#File_and_Command_Operations">File and Command Operations</a></li>
+      <li><a class="nav-link" href="#Search_and_Navigation">Search and Navigation</a></li>
+    </ul>
+  </nav>
+
+  <main id="main-doc">
+
+    <section class="main-section" id="Introduction_to_VS_Code">
+      <header>Introduction to VS Code</header>
+      <p>Visual Studio Code (VS Code) is one of the most widely used code editors for programmers due to its speed, flexibility, and powerful keyboard shortcuts.</p>
+      <p>Learning shortcut keys greatly improves efficiency by reducing the time needed to navigate menus and perform common tasks.</p>
+      <p>VS Code supports shortcuts for editing, navigation, debugging, file management, and more.</p>
+      <p>Most shortcuts work across different languages, making them useful for HTML, CSS, JavaScript, Python, C++, and many others.</p>
+      <p>Below are the most essential shortcut groups every developer should know.</p>
     </section>
 
-    <section class="main-section" id="Web_Development">
-      <header>Web Development</header>
-      <p>Web development is the process of creating and maintaining websites or web applications that function across the internet. It involves a combination of coding, design, and problem-solving.</p>
-      <p>The field of web development is divided into <code>front-end</code> and <code>back-end</code> development, working together to build seamless online experiences.</p>
+    <section class="main-section" id="Basic_Editing_Shortcuts">
+      <header>Basic Editing Shortcuts</header>
+      <p>Basic editing shortcuts help you write and manage code quickly. These shortcuts allow you to copy, move, delete, and format lines with ease.</p>
       <ul>
-        <li>Front-end: User interface</li>
-        <li>Back-end: Server-side logic</li>
-        <li>Full-stack: Both front and back</li>
+        <li><code>Ctrl + C</code> – Copy line</li>
+        <li><code>Ctrl + X</code> – Cut line</li>
+        <li><code>Ctrl + V</code> – Paste</li>
+        <li><code>Ctrl + Z</code> – Undo changes</li>
+        <li><code>Shift + Alt + ↓/↑</code> – Duplicate line</li>
       </ul>
+      <p>These basic commands eliminate the need for constant mouse interaction, keeping your workflow fast and smooth.</p>
     </section>
 
-    <section class="main-section" id="HTML">
-      <header>HTML</header>
-      <p><code>HTML</code> is the backbone of every website. It provides the basic structure using elements such as headings, paragraphs, links, and lists.</p>
-      <p>It defines the meaning and structure of content, making it readable for browsers and accessible to users.</p>
+    <section class="main-section" id="Multi-Cursor_and_Selection">
+      <header>Multi-Cursor and Selection</header>
+      <p>VS Code supports multi-cursors, allowing developers to edit multiple lines or occurrences at the same time.</p>
       <ul>
-        <li><code>&lt;h1&gt;</code> to <code>&lt;h6&gt;</code> for headings</li>
-        <li><code>&lt;p&gt;</code> for paragraphs</li>
-        <li><code>&lt;a&gt;</code> for links</li>
+        <li><code>Alt + Click</code> – Add cursor at clicked position</li>
+        <li><code>Ctrl + Alt + ↑/↓</code> – Add cursor above/below</li>
+        <li><code>Ctrl + D</code> – Select next occurrence</li>
+        <li><code>Ctrl + Shift + L</code> – Select all occurrences</li>
+        <li><code>Shift + Alt + Right Arrow</code> – Expand selection</li>
       </ul>
+      <p>These shortcuts are extremely powerful when editing repetitive text, variable names, or formatting elements.</p>
     </section>
 
-    <section class="main-section" id="CSS">
-      <header>CSS</header>
-      <p><code>CSS</code> is used to style web pages by controlling layout, colors, and fonts.</p>
-      <p>It separates design from structure, allowing for creative and responsive web designs.</p>
+    <section class="main-section" id="File_and_Command_Operations">
+      <header>File and Command Operations</header>
+      <p>VS Code shortcuts speed up file creation, switching, and command execution. These reduce the need for manual browsing of files.</p>
       <ul>
-        <li><code>color</code> - sets text color</li>
-        <li><code>background-color</code> - sets background color</li>
-        <li><code>font-size</code> - sets text size</li>
+        <li><code>Ctrl + N</code> – Create new file</li>
+        <li><code>Ctrl + S</code> – Save current file</li>
+        <li><code>Ctrl + Shift + S</code> – Save As</li>
+        <li><code>Ctrl + P</code> – Quick file search</li>
+        <li><code>Ctrl + Shift + P</code> – Open Command Palette</li>
       </ul>
+      <p>The Command Palette (<code>Ctrl + Shift + P</code>) is one of the most powerful features, giving access to thousands of commands instantly.</p>
     </section>
 
-    <section class="main-section" id="JavaScript">
-      <header>JavaScript</header>
-      <p><code>JavaScript</code> adds interactivity to web pages, making them dynamic and responsive.</p>
-      <p>It’s used for creating animations, form validations, and real-time updates.</p>
+    <section class="main-section" id="Search_and_Navigation">
+      <header>Search and Navigation</header>
+      <p>Searching and navigating through code quickly is essential for efficient development, especially in large projects.</p>
       <ul>
-        <li><code>alert()</code> - displays messages</li>
-        <li><code>document.getElementById()</code> - selects elements</li>
-        <li><code>addEventListener()</code> - handles user actions</li>
+        <li><code>Ctrl + F</code> – Find in file</li>
+        <li><code>Ctrl + H</code> – Replace in file</li>
+        <li><code>Ctrl + Shift + F</code> – Search across entire project</li>
+        <li><code>Ctrl + B</code> – Toggle sidebar</li>
+        <li><code>Ctrl + Tab</code> – Switch between files</li>
       </ul>
+      <p>These shortcuts allow developers to instantly locate functions, components, errors, and variables without scrolling manually.</p>
     </section>
+
   </main>
 </body>
 </html>
