--- a/ProductLanding/index.html
+++ b/ProductLanding/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <header id="header">
-    <img id="header-img" src="guitar.png" alt="KVC Music Logo">
+    <img id="header-img" src="Kleiser.png" alt="KVC Music Logo">
 
     <nav id="nav-bar">
       <a class="nav-link" href="#models">Guitars</a>
@@ -47,14 +47,14 @@
       <h2>Product Demo</h2>
       <div class="video-wrap">
         <iframe 
-          id="video"
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/ysz5S6PUM-U"
-          title="Product demo"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen>
+        id="video"
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/LrpMDssOISg?si=Ltd_3axbDsmAls-w"
+        title="Product demo"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
         </iframe>
       </div>
     </section>
